// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Card /> renders the <Card /> toggles the card feature 1`] = `
<div
  class="card__Group-sc-1tn30zk-2 nsvHM"
>
  <div
    class="card__Container-sc-1tn30zk-1 lehIxu"
  >
    <p
      class="card__Title-sc-1tn30zk-0 fKuAJk"
    >
      Documentaries
    </p>
    <div
      class="card__Entities-sc-1tn30zk-14 upsjE"
    >
      <div
        class="card__Item-sc-1tn30zk-7 daHMgx"
        data-testid="tiger-king-item-feature"
      >
        <img
          class="card__Image-sc-1tn30zk-6 eDDDAR"
          src="/images/series/documentaries/tiger-king/small.jpg"
        />
        <div
          class="card__Meta-sc-1tn30zk-5 fsGqMj"
        >
          <p
            class="card__SubTitle-sc-1tn30zk-3 ifZMmT"
          >
            Tiger King
          </p>
          <p
            class="card__Text-sc-1tn30zk-4 bTOIze"
          >
            Tiger King description
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    class="card__Container-sc-1tn30zk-1 lehIxu"
  >
    <p
      class="card__Title-sc-1tn30zk-0 fKuAJk"
    >
      Feel Good
    </p>
    <div
      class="card__Entities-sc-1tn30zk-14 upsjE"
    >
      <div
        class="card__Item-sc-1tn30zk-7 daHMgx"
        data-testid="juno-item-feature"
      >
        <img
          class="card__Image-sc-1tn30zk-6 eDDDAR"
          src="/images/series/feel-good/juno/small.jpg"
        />
        <div
          class="card__Meta-sc-1tn30zk-5 fsGqMj"
        >
          <p
            class="card__SubTitle-sc-1tn30zk-3 ifZMmT"
          >
            Juno
          </p>
          <p
            class="card__Text-sc-1tn30zk-4 bTOIze"
          >
            Juno description
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Card /> renders the <Card /> with populated data 1`] = `
<div
  class="card__Group-sc-1tn30zk-2 nsvHM"
>
  <div
    class="card__Container-sc-1tn30zk-1 lehIxu"
  >
    <p
      class="card__Title-sc-1tn30zk-0 fKuAJk"
    >
      Documentaries
    </p>
    <div
      class="card__Entities-sc-1tn30zk-14 upsjE"
    >
      <div
        class="card__Item-sc-1tn30zk-7 daHMgx"
      >
        <img
          class="card__Image-sc-1tn30zk-6 eDDDAR"
          src="/images/series/documentaries/tiger-king/small.jpg"
        />
        <div
          class="card__Meta-sc-1tn30zk-5 fsGqMj"
        >
          <p
            class="card__SubTitle-sc-1tn30zk-3 ifZMmT"
          >
            Tiger King
          </p>
          <p
            class="card__Text-sc-1tn30zk-4 bTOIze"
          >
            Tiger King description
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    class="card__Container-sc-1tn30zk-1 lehIxu"
  >
    <p
      class="card__Title-sc-1tn30zk-0 fKuAJk"
    >
      Feel Good
    </p>
    <div
      class="card__Entities-sc-1tn30zk-14 upsjE"
    >
      <div
        class="card__Item-sc-1tn30zk-7 daHMgx"
      >
        <img
          class="card__Image-sc-1tn30zk-6 eDDDAR"
          src="/images/series/feel-good/juno/small.jpg"
        />
        <div
          class="card__Meta-sc-1tn30zk-5 fsGqMj"
        >
          <p
            class="card__SubTitle-sc-1tn30zk-3 ifZMmT"
          >
            Juno
          </p>
          <p
            class="card__Text-sc-1tn30zk-4 bTOIze"
          >
            Juno description
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;
